k8s/base/envoy/gatewayclass.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: booking-gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
