k8s/base/envoy/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: booking-gateway
spec:
  gatewayClassName: booking-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
